<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            app:title="@string/phone_login"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/countryCodeEditText"
                android:inputType="number"
                android:hint="@string/enter_country_code"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneEditText"
                android:inputType="number"
                android:hint="@string/enter_phone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passEditText"
                android:inputType="textPassword"
                android:hint="@string/enter_pass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/codeEditText"
                android:inputType="number"
                android:hint="@string/enter_code"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verifyPhoneBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/verify_phone"
                android:textColor="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/update_button_bg"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/update_button_bg"/>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/update_button_bg"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginWithCodeBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login_with_code"
                android:textColor="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/update_button_bg"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>