<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signAnonymousTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_anonymous" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithEmailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_email" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithMobilePhoneTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_mobile_phone" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithHuaweiTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_huawei_id" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithHuaweiGameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_huawei_game" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithSelfOwnedAccountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_self_owned_account" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithWeChatTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_we_chat" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithFacebookTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_facebook" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithTwitterTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_twitter" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithWeiboTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_weibo" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithQQTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_qq" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signWithGoogleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_with_google_and_game_service" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signOutTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/sign_out" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>